--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,6 @@ li {
 	min-height: 100vh;
 	margin: 0 auto;
 	padding: 1rem 0;
-	border: 1px solid black;
 }
 
 .task-container > * {
@@ -37,17 +36,39 @@ li {
 }
 
 .task-state {
+	position: relative;
 	display: flex;
 	justify-content: space-evenly;
 	width: 100%;
 	border-bottom: 1px solid var(--grey);
-	padding: 1rem 0;
 }
 
 .button {
 	background: none;
 	border: none;
 	font-size: 1.2rem;
+	padding: 1rem;
+	width: 100px;
+	min-width: fit-content;
+}
+
+.active {
+	position: relative;
+}
+
+.active::before {
+	position: absolute;
+	left: 0;
+	bottom: -92%;
+	content: '';
+	height: 92%;
+	width: 100%;
+	border-radius: 2.5px;
+	border-top: 5px solid var(--blue);
+}
+
+.active {
+	transform: all 0.3s ease;
 }
 
 .task-input {
@@ -87,6 +108,9 @@ li {
 	margin: 1rem;
 }
 
+.line-thorough {
+	text-decoration: line-through;
+}
 button:hover {
 	cursor: pointer;
 }
